# CXXTerminal

./: .gitmodules  CMakeLists.txt  README.md  install_manifest.txt  main.cpp
include/: AdvancedTabCompleter.h  AnsiCodes.h  ArgumentParser.h  CString.h  QuickTerminal.h  Terminal.h  TerminalGrapth.h  TerminalTable.h
libraries/: build_event.sh
src/: ArgumentParser.cpp  TabCompleter.cpp  Terminal.cpp  TerminalAnsi.cpp  TerminalIO.cpp
src/utils/: CString.cpp  Grapth.cpp
test/: Main.cpp
